--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^5.1.0",
     "nodemon": "^3.1.9",
+    "uuid": "^11.1.0",
     "ws": "^8.18.1"
   }
 }
