--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^5.1.0",
+    "firebase": "^11.6.0",
     "nodemon": "^3.1.9",
     "uuid": "^11.1.0",
     "ws": "^8.18.1"
