--- a/website/package.json
+++ b/website/package.json
@@ -17,12 +17,15 @@
     "@mui/styled-engine-sc": "^7.0.2",
     "@mui/styles": "^6.4.8",
     "@reduxjs/toolkit": "^2.6.1",
+    "bcrypt": "^5.1.1",
     "firebase": "^11.6.0",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
-    "styled-components": "^6.1.17"
+    "styled-components": "^6.1.17",
+    "util": "^0.12.5",
+    "web-encoding": "^1.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
