--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "firebase": "^11.6.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
