--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "node-fetch": "^2.7.0",
     "node-localstorage": "^3.0.5",
+    "socket.io-client": "^4.8.1",
     "ws": "^8.18.1"
   }
 }
