--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,11 @@
 {
   "name": "tunnel",
   "version": "1.0.0",
-  "description": "",
+  "description": "My Tunnel CLI – package into a single .exe",
   "bin": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "pkg . --out-path dist"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,13 @@
     "node-localstorage": "^3.0.5",
     "socket.io-client": "^4.8.1",
     "ws": "^8.18.1"
+  },
+  "pkg": {
+    "assets": [
+      "scratch/**/*"
+    ],
+    "targets": [
+      "node16-win-x64"
+    ]
   }
 }
