--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,5 @@
  NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-K4S131VJ2N"
  TOKEN_PEPPER="pepper@fnfgnkjgnkjgnkfog"
  JWT_SECRET="mnbvsrtyhgfdsxcvnjtdsxcvbhgdc"
+ REDISHOST="redis-11140.crce179.ap-south-1-1.ec2.redns.redis-cloud.com"
+REDISPASS="tysHGaq85HJCyfgPP90s8ISe51UUWhx1"
