--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "kleur": "^4.1.5",
     "node-fetch": "^2.7.0",
     "node-localstorage": "^3.0.5",
     "socket.io-client": "^4.8.1",
